--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.security.user.name=root
-spring.security.user.password=root123
-spring.security.user.roles=USERS
+#spring.security.user.name=root
+#spring.security.user.password=root123
+#spring.security.user.roles=USERS
